--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -21,8 +21,8 @@ jobs:
         uses: Azure/login@v1.1
         with:
           # Paste output of `az ad sp create-for-rbac` as value of secret variable: AZURE_CREDENTIALS
-          creds: AZURE_CREDENTIALS
-      
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+
       # Checkout the repository to the GitHub Actions runner
       - name: Checkout
         uses: actions/checkout@v2
