--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -29,7 +29,9 @@ jobs:
 
       # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
       - name: Terraform Init
-        run: make init
+        run:
+          source ./hack/secrets.sh
+          make init
 
       # Checks that all Terraform configuration files adhere to a canonical format
       - name: Terraform Format
