--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -30,6 +30,8 @@ jobs:
       # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
       - name: Terraform Init
         run:
+          source ./hack/variables.sh
+          source ./hack/secrets.sh
           make init
 
       # Checks that all Terraform configuration files adhere to a canonical format
