--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -27,20 +27,23 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
-      - name: Terraform Init
+      - name: Fetch variables
         run:
           source ./hack/variables.sh
           source ./hack/secrets.sh
-          ./terraform/Microsoft/init.sh
+
+          # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
+      - name: Terraform Init
+        run:
+          make init
 
       # Checks that all Terraform configuration files adhere to a canonical format
       - name: Terraform Format
-        run: terraform fmt -check
+        run: make fmt
 
       # Generates an execution plan for Terraform
       - name: Terraform Plan
-        run: terraform plan
+        run: make plan
 
         # On push to main, build or change infrastructure according to Terraform configuration files
         # Note: It is recommended to set up a required "strict" status check in your repository for "Terraform Cloud". See the documentation on "strict" required status checks for more information: https://help.github.com/en/github/administering-a-repository/types-of-required-status-checks
