--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -31,7 +31,8 @@ jobs:
         run:
           source ./hack/variables.sh &&
           source ./hack/secrets.sh &&
-          ./terraform/Microsoft/init.sh
+          cd ./terraform/Microsoft &&
+          ./init.sh
 
           # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
       - name: Terraform Init
