--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -27,25 +27,26 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Fetch variables
+      - name: Terraform Init
         run:
           source ./hack/variables.sh &&
           source ./hack/secrets.sh &&
           cd ./terraform/Microsoft &&
           ./init.sh
 
-          # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
-      - name: Terraform Init
-        run:
-          make init
-
       # Checks that all Terraform configuration files adhere to a canonical format
       - name: Terraform Format
-        run: make fmt
+        run:
+          cd ./terraform/Microsoft &&
+          terraform fmt -check
 
       # Generates an execution plan for Terraform
       - name: Terraform Plan
-        run: make plan
+        run:
+          source ./hack/variables.sh &&
+          source ./hack/secrets.sh &&
+          cd ./terraform/Microsoft &&
+          ./plan.sh
 
         # On push to main, build or change infrastructure according to Terraform configuration files
         # Note: It is recommended to set up a required "strict" status check in your repository for "Terraform Cloud". See the documentation on "strict" required status checks for more information: https://help.github.com/en/github/administering-a-repository/types-of-required-status-checks
