--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -13,6 +13,18 @@ on:
     - '*.md'
 
 jobs:
+  shellcheck:
+    name: 'shellcheck'
+    runs-on: ubuntu-latest
+
+    # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
+    defaults:
+      run:
+        shell: bash
+    steps:
+    - name: Run ShellCheck
+      uses: ludeeus/action-shellcheck@master
+
   terraform:
     name: 'Terraform'
     runs-on: ubuntu-latest
