add shellcheck to everything

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -24,6 +24,8 @@ jobs:
     steps:
     - name: Run ShellCheck
       uses: ludeeus/action-shellcheck@master
+      with:
+        scandir: './hack'
 
   terraform:
     name: 'Terraform'
