--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -25,10 +25,10 @@ jobs:
     - name: Run ShellCheck
       uses: ludeeus/action-shellcheck@master
       with:
-        scandir: './hack'
+        scandir: './hack/*'
 
   terraform:
-    name: 'Terraform'
+    name: 'terraform'
     runs-on: ubuntu-latest
 
     # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
