--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -92,10 +92,15 @@ jobs:
               body: output
             })
 
+      - name: Terraform Plan Status
+        if: steps.plan.outcome == 'failure'
+        run: exit 1
 
         # On push to main, build or change infrastructure according to Terraform configuration files
         # Note: It is recommended to set up a required "strict" status check in your repository for "Terraform Cloud". See the documentation on "strict" required status checks for more information: https://help.github.com/en/github/administering-a-repository/types-of-required-status-checks
       - name: Terraform Apply
         id: apply
         if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-        run: terraform apply -auto-approve
+        run:
+          cd ./terraform/Microsoft &&
+          terraform apply -auto-approve
