--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -69,11 +69,14 @@ jobs:
           terraform plan -no-color
         continue-on-error: true
 
+      - run: echo ${{ steps.plan.outputs.stdout }}
+      - run: echo ${{ steps.plan.outputs.* }}
+
       - name: Update Pull Request
         uses: actions/github-script@0.9.0
         if: github.event_name == 'pull_request'
         env:
-          PLAN: "terraform\n${{ steps.plan.outputs }}"
+          PLAN: "terraform\n${{ steps.plan.outputs.* }}"
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
