--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -66,11 +66,13 @@ jobs:
           source ./hack/variables.sh &&
           source ./hack/secrets.sh &&
           cd ./terraform/Microsoft &&
-          terraform plan -no-color
+          terraform plan -no-color -input=false
         continue-on-error: true
 
       - run: echo ${{ steps.plan.outputs.stdout }}
-      - run: echo ${{ steps.plan.outputs.* }}
+      - run: echo ${{ steps.plan.outputs.*.[0] }}
+      - run: echo ${{ steps.plan.outputs.*.[1] }}
+      - run: echo ${{ steps.plan.outputs.*.[2] }}
 
       - name: Update Pull Request
         uses: actions/github-script@0.9.0
@@ -108,4 +110,4 @@ jobs:
           TF_IN_AUTOMATION: true
         run:
           cd ./terraform/Microsoft &&
-          terraform apply -auto-approve
+          terraform apply -auto-approve -input=false
