--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -41,6 +41,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
+      - uses: hashicorp/setup-terraform@v1
+
       - name: Terraform Init
         id: init
         env:
