--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -79,15 +79,15 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
-            const output = `#### Terraform Format and Style 🖌\`${{ steps.fmt.outcome }}\`
+            const output = `
+            Pusher: @${{ github.actor }}, Action: \`${{ github.event_name }}\`
+            #### Terraform Format and Style 🖌\`${{ steps.fmt.outcome }}\`
             #### Terraform Initialization ⚙️\`${{ steps.init.outcome }}\`
             #### Terraform Plan 📖\`${{ steps.plan.outcome }}\`
             <details><summary>Show Plan</summary>
-            \`\`\`terraform\n
             ${process.env.PLAN}
-            \`\`\`
             </details>
-            *Pusher: @${{ github.actor }}, Action: \`${{ github.event_name }}\`*`;
+            `;
 
             github.issues.createComment({
               issue_number: context.issue.number,
