--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -85,9 +85,11 @@ jobs:
             #### Terraform Initialization ⚙️\`${{ steps.init.outcome }}\`
             #### Terraform Plan 📖\`${{ steps.plan.outcome }}\`
             <details><summary>Show Plan</summary>
-            \`\`\`terraform \n \n
+            \n
+            \`\`\`terraform
             ${process.env.PLAN}
             \`\`\`
+            \n
             </details>
             `;
 
