--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -123,6 +123,16 @@ jobs:
         uses: actions/checkout@v2
 
       - uses: hashicorp/setup-terraform@v1
+      - name: Terraform Init
+        id: init
+        env:
+          TF_IN_AUTOMATION: true
+        run:
+          source ./hack/variables.sh &&
+          source ./hack/secrets.sh &&
+          cd ./terraform/Microsoft &&
+          ./init.sh
+
       - name: Terraform Apply
         id: apply
         if: github.ref == 'refs/heads/main' && github.event_name == 'push'
