--- a/.github/workflows/secrets.yaml
+++ b/.github/workflows/secrets.yaml
@@ -10,6 +10,6 @@ jobs:
     - uses: actions/checkout@v2
     - name: Detect Secrets
       run:
-        pip install detect-secrets
-        detect-secrets scan > .secrets.baseline
+        pip install detect-secrets &&
+        detect-secrets scan > .secrets.baseline &&
         detect-secrets -v audit .secrets.baseline
