reuse exsisting action

--- a/.github/workflows/secrets.yaml
+++ b/.github/workflows/secrets.yaml
@@ -3,13 +3,10 @@ name: detect-secrets
 on: [push]
 
 jobs:
-  secrets:
-    runs-on: ubuntu-latest
-
+  check-for-secrets:
+    runs-on: 'ubuntu-latest'
     steps:
-    - uses: actions/checkout@v2
-    - name: Detect Secrets
-      run:
-        pip install detect-secrets &&
-        detect-secrets scan > .secrets.baseline &&
-        detect-secrets -v audit .secrets.baseline
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Run Yelp's detect-secrets
+        uses: RobertFischer/detect-secrets-action@v2.0.0
