--- a/.github/workflows/secrets.yaml
+++ b/.github/workflows/secrets.yaml
@@ -1,12 +1,21 @@
-name: detect-secrets
+name: Secrets
 
 on: [push]
 
 jobs:
-  check-for-secrets:
-    runs-on: 'ubuntu-latest'
+  secrets:
+
+    runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: Run Yelp's detect-secrets
-        uses: RobertFischer/detect-secrets-action@v2.0.0
+    - uses: actions/checkout@v2
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.8
+    # You can test your matrix by printing the current Python version
+    - name: Display Python version && detect-secrets
+      run: python -c "import sys; print(sys.version)"
+        pip install detect-secrets &&
+        detect-secrets scan > .secrets.baseline &&
+        detect-secrets -v audit .secrets.baseline
