--- a/.github/workflows/secrets.yaml
+++ b/.github/workflows/secrets.yaml
@@ -15,7 +15,7 @@ jobs:
         python-version: 3.8
     # You can test your matrix by printing the current Python version
     - name: Display Python version && detect-secrets
-      run: python -c "import sys; print(sys.version)"
+      run:
         pip install detect-secrets &&
         detect-secrets scan > .secrets.baseline &&
         detect-secrets -v audit .secrets.baseline
