Change log-level to error
https://toolkit.fluxcd.io/cmd/flux_bootstrap/
      --log-level logLevel         log level, available options are: (debug, info, error) (default info)

--- a/clusters/load-more/flux-system/gotk-components.yaml
+++ b/clusters/load-more/flux-system/gotk-components.yaml
@@ -937,7 +937,7 @@ spec:
       - args:
         - --events-addr=http://notification-controller/
         - --watch-all-namespaces=true
-        - --log-level=info
+        - --log-level=error
         - --log-json
         - --enable-leader-election
         - --storage-path=/data
@@ -1303,7 +1303,7 @@ spec:
       - args:
         - --events-addr=http://notification-controller/
         - --watch-all-namespaces=true
-        - --log-level=info
+        - --log-level=error
         - --log-json
         - --enable-leader-election
         env:
@@ -1788,7 +1788,7 @@ spec:
       - args:
         - --events-addr=http://notification-controller/
         - --watch-all-namespaces=true
-        - --log-level=info
+        - --log-level=error
         - --log-json
         - --enable-leader-election
         env:
@@ -2365,7 +2365,7 @@ spec:
       containers:
       - args:
         - --watch-all-namespaces=true
-        - --log-level=info
+        - --log-level=error
         - --log-json
         - --enable-leader-election
         env:
